Fix other types of modals being the full width on mobile

--- a/client/src/sass/_utils.scss
+++ b/client/src/sass/_utils.scss
@@ -1,5 +1,5 @@
 .show {
-  display: block !important;
+  display: flex !important;
 }
 
 .clearfix {
